<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtempe"
    tools:context=".TemperaturaActivity">

    <LinearLayout
        android:id="@+id/values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/celsius"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingVertical="15dp" />

            <TextView
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fahrenheit"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingVertical="15dp" />

            <TextView
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/fahrenheit"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kelvin"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingVertical="15dp" />

            <TextView
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelvin"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@+id/values"
        android:gravity="center"
        android:paddingVertical="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/input"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="15dp"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:hint="Valor"
                android:textColorHint="@color/white"
                android:layout_marginRight="10dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:padding="15dp"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>